fix(local-dev): 修复本地启动 4 个 P0 阻塞问题
修复 4 个导致本地首次启动直接失败的问题：

1. Spring Boot 1.5.9 用 findOne 而非 findById（fix: UserMemberRepository + MemberService）
   - UserMemberRepository 里重写了父接口的 findById(Long)，触发 Spring Data
     派生方法解析：找不到 UserMember.id 属性（主键叫 userId）→ 启动失败
   - 恢复继承父类 findOne(ID)，MemberService 两处调用同步改回

2. dev logback.xml 硬编码 /logs 绝对路径 → macOS 根目录只读无法启动
   - restapi/wap/sso/web 四个模块的 dev/logback.xml 统一改为
     ${YPAT_LOG_DIR:-./logs}，pre/pro 保持 /logs 不动（线上 K8s 有效）

3. Java 8 不支持 Stream.toList() → NoSuchMethodError
   - MemberService.listActivePlans 和 findUserOrders 改用
     .collect(Collectors.toList())（pom 强制 java.version=1.8）

4. docker/mysql/dev-init.sql 权限与认证插件不足
   - MySQL 8 默认 caching_sha2_password，老 mysql-connector-java 5.1.x
     不支持 → 显式指定 mysql_native_password
   - Hibernate ddl-auto=update 需要 DDL 权限 → 补齐
     CREATE/ALTER/DROP/INDEX/REFERENCES

背景与完整踩坑记录见 IMPROVEMENT.md
"[2026-07-01] 本地启动 30+ 分钟仍未完成 — 全流程踩坑复盘" 章节。